--- a/main.css
+++ b/main.css
@@ -43,7 +43,7 @@ body
 	outline: 0;
 	background: #f2f2f2;
 	border: 0;
-	/*margin: 0 0 10px;*/
+	margin: 0 0 10px;
 	box-sizing: border-box;
 	font-size: 14px;
 	padding: 15px;
@@ -66,7 +66,7 @@ body
 	font-size: 14px;
 	-webkit-transition: all 0.3 ease;
 	transition: all 0.3 ease;
-	margin: 1%;
+	margin: 2% 1% 4%;
 	font-weight: bold;
 	text-shadow: 1px 1px rgba(0, 0, 0, .5);
 	cursor: pointer;
